[B]Version 1.0.1[/B]

- Add support for Shaw Go
- Improved error handling
- Pull channel IDs from the API config instead of hard coding
- Add program information

[B]Version 1.0.0[/B]

- Initial revision. Plays Sportsnet live streams.